FinalExam/bnfc/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCpp.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp9 -> Exp9                               (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp4 -> Exp4                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp2 -> Exp2                               (16)
	%start_pExp -> Exp                                 (17)
	%start_pExp1 -> Exp1                               (18)
	%start_pExp5 -> Exp5                               (19)
	%start_pExp6 -> Exp6                               (20)
	%start_pExp7 -> Exp7                               (21)
	%start_pExp10 -> Exp10                             (22)
	%start_pListExp -> ListExp                         (23)
	%start_pType -> Type                               (24)
	%start_pListId -> ListId                           (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	String -> L_quoted                                 (28)
	Id -> L_Id                                         (29)
	Program -> ListDef                                 (30)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (31)
	ListDef ->                                         (32)
	ListDef -> ListDef Def                             (33)
	Arg -> Type Id                                     (34)
	ListArg ->                                         (35)
	ListArg -> Arg                                     (36)
	ListArg -> Arg ',' ListArg                         (37)
	Stm -> Exp ';'                                     (38)
	Stm -> Type ListId ';'                             (39)
	Stm -> Type Id '=' Exp ';'                         (40)
	Stm -> 'return' Exp ';'                            (41)
	Stm -> 'return' ';'                                (42)
	Stm -> 'while' '(' Exp ')' Stm                     (43)
	Stm -> '{' ListStm '}'                             (44)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (45)
	ListStm ->                                         (46)
	ListStm -> ListStm Stm                             (47)
	Exp15 -> 'true'                                    (48)
	Exp15 -> 'false'                                   (49)
	Exp15 -> Integer                                   (50)
	Exp15 -> Double                                    (51)
	Exp15 -> String                                    (52)
	Exp15 -> Id                                        (53)
	Exp15 -> Id '(' ListExp ')'                        (54)
	Exp15 -> '(' Exp ')'                               (55)
	Exp14 -> Exp15 '++'                                (56)
	Exp14 -> Exp15 '--'                                (57)
	Exp14 -> Exp15                                     (58)
	Exp13 -> '++' Exp14                                (59)
	Exp13 -> '--' Exp14                                (60)
	Exp13 -> Exp14                                     (61)
	Exp12 -> Exp12 '*' Exp13                           (62)
	Exp12 -> Exp12 '/' Exp13                           (63)
	Exp12 -> Exp13                                     (64)
	Exp11 -> Exp11 '+' Exp12                           (65)
	Exp11 -> Exp11 '-' Exp12                           (66)
	Exp11 -> Exp12                                     (67)
	Exp9 -> Exp9 '<' Exp10                             (68)
	Exp9 -> Exp9 '>' Exp10                             (69)
	Exp9 -> Exp9 '<=' Exp10                            (70)
	Exp9 -> Exp9 '>=' Exp10                            (71)
	Exp9 -> Exp10                                      (72)
	Exp8 -> Exp8 '==' Exp9                             (73)
	Exp8 -> Exp8 '!=' Exp9                             (74)
	Exp8 -> Exp9                                       (75)
	Exp4 -> Exp4 '&&' Exp5                             (76)
	Exp4 -> Exp5                                       (77)
	Exp3 -> Exp3 '||' Exp4                             (78)
	Exp3 -> Exp4                                       (79)
	Exp2 -> Exp3 '=' Exp2                              (80)
	Exp2 -> Exp3                                       (81)
	Exp -> Exp1                                        (82)
	Exp1 -> Exp2                                       (83)
	Exp5 -> Exp6                                       (84)
	Exp6 -> Exp7                                       (85)
	Exp7 -> Exp8                                       (86)
	Exp10 -> Exp11                                     (87)
	ListExp ->                                         (88)
	ListExp -> Exp                                     (89)
	ListExp -> Exp ',' ListExp                         (90)
	Type -> 'bool'                                     (91)
	Type -> 'int'                                      (92)
	Type -> 'double'                                   (93)
	Type -> 'void'                                     (94)
	Type -> 'string'                                   (95)
	ListId -> Id                                       (96)
	ListId -> Id ',' ListId                            (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'double'       { PT _ (TS _ 20) }
	'else'         { PT _ (TS _ 21) }
	'false'        { PT _ (TS _ 22) }
	'if'           { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'return'       { PT _ (TS _ 25) }
	'string'       { PT _ (TS _ 26) }
	'true'         { PT _ (TS _ 27) }
	'void'         { PT _ (TS _ 28) }
	'while'        { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'||'           { PT _ (TS _ 31) }
	'}'            { PT _ (TS _ 32) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp9    rule  12
	%start_pExp8    rule  13
	%start_pExp4    rule  14
	%start_pExp3    rule  15
	%start_pExp2    rule  16
	%start_pExp     rule  17
	%start_pExp1    rule  18
	%start_pExp5    rule  19
	%start_pExp6    rule  20
	%start_pExp7    rule  21
	%start_pExp10   rule  22
	%start_pListExp rule  23
	%start_pType    rule  24
	%start_pListId  rule  25
	Integer         rule  26
	Double          rule  27
	String          rule  28
	Id              rule  29
	Program         rule  30
	Def             rule  31
	ListDef         rules 32, 33
	Arg             rule  34
	ListArg         rules 35, 36, 37
	Stm             rules 38, 39, 40, 41, 42, 43, 44, 45
	ListStm         rules 46, 47
	Exp15           rules 48, 49, 50, 51, 52, 53, 54, 55
	Exp14           rules 56, 57, 58
	Exp13           rules 59, 60, 61
	Exp12           rules 62, 63, 64
	Exp11           rules 65, 66, 67
	Exp9            rules 68, 69, 70, 71, 72
	Exp8            rules 73, 74, 75
	Exp4            rules 76, 77
	Exp3            rules 78, 79
	Exp2            rules 80, 81
	Exp             rule  82
	Exp1            rule  83
	Exp5            rule  84
	Exp6            rule  85
	Exp7            rule  86
	Exp10           rule  87
	ListExp         rules 88, 89, 90
	Type            rules 91, 92, 93, 94, 95
	ListId          rules 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'string'       reduce using rule 32
	'void'         reduce using rule 32
	%eof           reduce using rule 32

	Program        goto state 96
	ListDef        goto state 97

State 1


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Def            goto state 94
	Type           goto state 95

State 2


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'string'       reduce using rule 32
	'void'         reduce using rule 32
	%eof           reduce using rule 32

	ListDef        goto state 93

State 3


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Arg            goto state 92
	Type           goto state 91

State 4


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36
	%eof           reduce using rule 35

	Arg            goto state 89
	ListArg        goto state 90
	Type           goto state 91

State 5


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 61
	'if'           shift, and enter state 85
	'int'          shift, and enter state 34
	'return'       shift, and enter state 86
	'string'       shift, and enter state 35
	'true'         shift, and enter state 62
	'void'         shift, and enter state 36
	'while'        shift, and enter state 87
	'{'            shift, and enter state 88
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Stm            goto state 82
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 83
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56
	Type           goto state 84

State 6


	'('            reduce using rule 46
	'++'           reduce using rule 46
	'--'           reduce using rule 46
	'bool'         reduce using rule 46
	'double'       reduce using rule 46
	'false'        reduce using rule 46
	'if'           reduce using rule 46
	'int'          reduce using rule 46
	'return'       reduce using rule 46
	'string'       reduce using rule 46
	'true'         reduce using rule 46
	'void'         reduce using rule 46
	'while'        reduce using rule 46
	'{'            reduce using rule 46
	L_integ        reduce using rule 46
	L_doubl        reduce using rule 46
	L_quoted       reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	ListStm        goto state 81

State 7


	'('            shift, and enter state 58
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 80

State 8


	'('            shift, and enter state 58
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 79

State 9


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 78

State 10


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 77

State 11


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 76

State 12


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 75
	Exp10          goto state 56

State 13


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 74
	Exp10          goto state 56

State 14


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 73
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 15


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 72
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 16


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 71
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 17


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 70
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 18


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp1           goto state 69
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 19


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp5           goto state 68
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 20


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp6           goto state 67
	Exp7           goto state 55
	Exp10          goto state 56

State 21


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp7           goto state 66
	Exp10          goto state 56

State 22


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 65

State 23


	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'--'           shift, and enter state 60
	'false'        shift, and enter state 61
	'true'         shift, and enter state 62
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 63
	L_quoted       shift, and enter state 64
	L_Id           shift, and enter state 30
	%eof           reduce using rule 88

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 51
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56
	ListExp        goto state 57

State 24


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Type           goto state 31

State 25


	L_Id           shift, and enter state 30

	Id             goto state 28
	ListId         goto state 29

State 26


	L_integ        shift, and enter state 27


State 27

	Integer -> L_integ .                                (rule 26)

	'!='           reduce using rule 26
	'&&'           reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	'++'           reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'--'           reduce using rule 26
	'/'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'='            reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'||'           reduce using rule 26
	%eof           reduce using rule 26


State 28

	ListId -> Id .                                      (rule 96)
	ListId -> Id . ',' ListId                           (rule 97)

	','            shift, and enter state 131
	';'            reduce using rule 96
	%eof           reduce using rule 96


State 29

	%start_pListId -> ListId .                          (rule 25)

	%eof           accept


State 30

	Id -> L_Id .                                        (rule 29)
